--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,6 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.4.2", features = ["derive"] }
+diesel = { version = "2.1.1", features = ["postgres"] }
+dotenvy = "0.15.7"
+chrono = "0.4.31"
