--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,33 @@
-version: '1'
+version: '3'
 services:
-  db:
-    image: postgres
+  mongodb:
+    image: mongo:latest
+    container_name: mongodb-container
     environment:
-      - POSTGRES_USER=${POSTGRES_USER}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-      - POSTGRES_DB=${POSTGRES_DB}
+      MONGO_INITDB_ROOT_USERNAME: admin
+      MONGO_INITDB_ROOT_PASSWORD: yourpassword
+      MONGO_INITDB_DATABASE: yourdatabase
+    volumes:
+      - mongodb-data:/data/db
     ports:
-      - "5432:5432"
-  app:
-    build: .
-    ports:
-      - "3000:3000"
+      - "27017:27017"
+    networks:
+      - app-network
+
+  rust-app:
+    build:
+      context: ./rust-app # Path to your Rust application code
+      dockerfile: Dockerfile
+    container_name: rust-app-container
+    depends_on:
+      - mongodb
+    networks:
+      - app-network
+
+networks:
+  app-network:
+    driver: bridge
+
+volumes:
+  mongodb-data:
+
